@@ -7,6 +7,13 @@
 * Dev - Replaced uses of parse_url() with wp_parse_url().
 * Update - The [groups_group_info] shows user display_name instead of user_login when listing users and supports the none attribute.
 * Add - Adds the groups_verify_nonce() function.
+* Add - Adds the groups_verify_post_nonce() function.
+* Add - Adds the groups_verify_get_nonce() function.
+* Add - Adds the groups_verify_request_nonce() function.
+* Add - Adds the groups_sanitize_input() function.
+* Add - Adds the groups_sanitize_post() function.
+* Add - Adds the groups_sanitize_get() function.
+* Add - Adds the groups_sanitize_request() function.
 
 2026-01-05 - version 3.10.0
 * Update - WordPress 6.9 compatible.
